# viber

./: .gitignore  README.md  app.py  hats.db  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_db.py  wsgi.py
src/instance/: viber.db
src/viber/: __init__.py  extensions.py  init_db.py
src/viber/models/: __init__.py  cart.py  product.py  user.py
src/viber/routes/: __init__.py  auth.py  cart.py  pages.py
src/viber/utils/: __init__.py  decorators.py  template.py
static/css/: style.css
templates/: about.html  base.html  cart.html  contact.html  home.html  index.html  login.html  products.html
tests/: __init__.py  conftest.py  test_app.py
tests/test_auth/: test_login.py
tests/test_cart/: test_cart.py
tests/test_pages/: test_pages.py
tests/test_setup/: test_init_db.py  test_setup.py  test_wsgi.py
tests/test_templates/: test_templates.py
